# cursynth

./: .gitignore  .gitmodules  ChangeLog  INSTALL  Makefile  Makefile.am  README  README.md  configure.ac
cJSON/: Makefile.am  cJSON.c
doc/: .gitignore  Makefile.am  cursynth.1  cursynth.texi  fdl.texi  termite.texi
mopo/src/: envelope.cpp  envelope.h  feedback.h  filter.h  mopo.h  oscillator.cpp  oscillator.h  processor.h  processor_router.cpp  value.cpp  voice_handler.cpp  wave.h
patches/: bit_sin.mite  bwang.mite  default.mite  loaded_room.mite  test_patch1.mite  test_patch2.mite  water_wobble.mite  whistle.mite  whoooo.mite  womp.mite
po/: .gitignore  Makevars  POTFILES.in
rtaudio/: .gitignore  Makefile.am  RtAudio.cpp  RtAudio.h  configure.ac  install  readme
rtmidi/: .gitignore  Makefile.am  RtMidi.cpp  RtMidi.h  configure.ac  readme  rtmidi-config
src/: Makefile.am  cursynth.cpp  cursynth.h  cursynth_common.h  cursynth_engine.cpp  cursynth_engine.h  cursynth_gui.cpp  cursynth_gui.h  cursynth_strings.cpp  cursynth_strings.h  main.cpp  termite.cpp  termite.h  termite_common.h  termite_gui.cpp  termite_gui.h  termite_patch_handler.cpp  termite_patch_handler.h  termite_strings.cpp  termite_strings.h  termite_synth.cpp  termite_synth.h
